<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:title="Options">
            <menu>
                <item
                    android:id="@+id/graph_view"
                    android:icon="@drawable/ic_photo_size_select_actual_black_24dp"
                    android:title="@string/graph_view" />
                <item
                    android:id="@+id/map_view"
                    android:icon="@drawable/ic_map_black_24dp"
                    android:title="@string/route_on_map" />
                <item
                    android:id="@+id/refresh"
                    android:icon="@drawable/ic_refresh_black_24dp"
                    android:title="@string/refresh" />
                <item
                    android:id="@+id/exit"
                    android:icon="@drawable/ic_exit_to_app_black_24dp"
                    android:title="Exit" />
            </menu>
        </item>
    </group>
</menu>
