<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">
    <RelativeLayout
        android:id="@+id/rel_lay_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <include
            android:id="@+id/app_bar_main"
            layout="@layout/app_bar_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/butWifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signalWifi"
            android:layout_marginLeft="14sp"
            android:layout_marginTop="70sp" />
        <Button
            android:id="@+id/butMobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signalMobile"
            android:layout_marginTop="20sp"
            android:layout_marginLeft="14sp"
            android:layout_below="@+id/butWifi"/>
        <TextView
            android:id="@+id/connInfoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/butMobile"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="103sp"
            android:text="" />
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView_main"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:adSize="SMART_BANNER"
            app:adUnitId="@string/ban_ad_unit_id"
            android:gravity="bottom" />

    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>
